--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.5.0
+async-generator==1.10
+attrs==21.2.0
+beautifulsoup4==4.10.0
+bs4==0.0.1
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.11
@@ -7,21 +11,41 @@ defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==4.0.2
 django-allauth==0.48.0
+django-cors-headers==3.11.0
 django-heroku==0.3.1
 django-rest-framework==0.1.0
 djangorestframework==3.13.1
 gunicorn==20.1.0
+h11==0.12.0
 idna==3.3
+MouseInfo==0.1.3
+mysqlclient==2.1.0
 oauthlib==3.2.0
+outcome==1.1.0
 psycopg2==2.9.3
+PyAutoGUI==0.9.53
 pycparser==2.21
+PyGetWindow==0.0.9
 PyJWT==2.3.0
+PyMsgBox==1.0.9
+pyOpenSSL==21.0.0
+pyperclip==1.8.2
+PyRect==0.1.4
+PyScreeze==0.1.28
 python3-openid==3.2.0
+pytweening==1.0.4
 pytz==2021.3
 requests==2.27.1
 requests-oauthlib==1.3.1
+selenium==4.0.0
 six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.2.1
 sqlparse==0.4.2
+trio==0.19.0
+trio-websocket==0.9.2
 tzdata==2021.5
 urllib3==1.26.8
 whitenoise==6.0.0
+wsproto==1.0.0
